[package]
name = "glowie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytemuck = { version = "1.14.1", features = ["derive"] }
cpal = "0.15.2"
env_logger = "0.11.1"
glam = "0.25.0"
pollster = "0.3.0"
wgpu = "0.19.1"
winit = "0.29.10"
