[package]
name = "glowie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
audrey = "0.3.0"
bytemuck = { version = "1.14.1", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }
# https://github.com/RustAudio/cpal/pull/828
# cpal = "0.15.2"
cpal = { git = "https://github.com/agausmann/cpal.git", branch = "try_with_sample_rate" }
env_logger = "0.11.1"
glam = "0.25.0"
pollster = "0.3.0"
rand = "0.8.5"
wgpu = "0.19.1"
winit = "0.29.10"
